# Mandos

./: .gitignore  .gitmodules  CMakeLists.txt  ConanPresets.json  README.md  TODO.org  async_simulation_loop.hpp  conanfile.py
.github/workflows/: cmake-multi-platform.yml
include/: clock.hpp  fem_unit.hpp  gravity.hpp  hard_constraints.hpp  inertia_energies.hpp  integrators.hpp  linear_algebra.hpp  mandos.hpp  mandos_config.hpp  mandos_config.hpp.in  memory_pool.hpp  mesh.hpp  mesh_boundary.hpp  particle.hpp  particle_rigid_body_copuling.hpp  physics_render.hpp  physics_state.hpp  rigid_body.hpp  simulable_generator.hpp  simulation.hpp  spring.hpp  utility_functions.hpp  viewmandos.hpp
include/editor/: edit_mode.hpp
include/gui/: edit_mode.hpp
include/render/: draw_vector.hpp  simulation_visualization.hpp
resources/shaders/: axis.fs  diffuse_solid_color.fs  lighting.fs  lighting.vs  lighting_instancing.vs  normals.fs  pbr.fs  picker.fs  raymarching.fs  raymarching.vs
src/: CMakeLists.txt  async_simulation_loop.cpp  colliders.cpp  colliders.hpp  compute_tetrahedrons.cpp  differentiable.cpp  differentiable.hpp  edge.cpp  energies.hpp  fem_element.cpp  fem_element.hpp  fem_unit.hpp  gl_extensions.cpp  gl_extensions.hpp  gravity.hpp  hard_constraints.cpp  inertia_energies.cpp  inertia_energies.hpp  integrators.cpp  linear_algebra.hpp  main.cpp  mandos.cpp  mass_spring.cpp  mesh.hpp  mesh_boundary.cpp  particle.hpp  particle_rigid_body_coupling.hpp  particle_rigidbody_copuling.cpp  particle_rigidbody_coupling.cpp  physics_state.hpp  rigid_body.cpp  rigid_body.hpp  rod_segment.cpp  rod_segment.hpp  simulable_generator.hpp  simulation.cpp  simulation.hpp  simulation_visualization.cpp  spring.cpp  spring.hpp  (+3 more)
src/Mandos/: CMakeLists.txt  SimulationObject.h  async_simulation_loop.cpp  colliders.cpp  colliders.hpp  differentiable.cpp  differentiable.hpp  edge.cpp  edge.hpp  energies.hpp  fem_element.cpp  fem_element.hpp  gravity.hpp  inertia_energies.cpp  inertia_energies.hpp  integrators.cpp  integrators.hpp  linear_algebra.cpp  linear_algebra.hpp  mandos.cpp  mandos.hpp  memory_pool.hpp  mesh.hpp  mesh_boundary.cpp  particle.hpp  particle_rigid_body_coupling.hpp  particle_rigidbody_copuling.cpp  particle_rigidbody_coupling.cpp  physics_state.hpp  rigid_body.cpp  rigid_body.hpp  rod_segment.cpp  rod_segment.hpp  simulable_generator.hpp  simulation.cpp  simulation.hpp  sinc.cpp  sinc.hpp  spring.cpp  spring.hpp  (+1 more)
src/Mandos/python/: pybinding.cpp
src/Mandos/simulation_generators/: mass_spring.cpp  rod_generator.cpp
src/Mandos/standalone/: main.cpp  main_rods_derivatives.cpp
src/editor/: edit_mode.cpp  main.cpp
src/gui/: edit_mode.cpp  main.cpp
src/optimization/: LineSearch.hpp  LineSearchNocedal.cpp
src/python/: pybinding.cpp
src/rendering/: gl_extensions.cpp  gl_extensions.hpp  viewmandos.cpp
src/simulation_generators/: FEM_generators.cpp  FEM_tetrahedron.cpp  mass_spring.cpp  rigid_body_tennis_racket.cpp  rod_generator.cpp
src/standalone/: main.cpp  main2.cpp  main_rods_derivatives_2.cpp  main_rods_test.cpp
